--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,14 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot=DEBUG
+logging.level.me.dio=DEBUG
+
+spring.resources.static-locations=classpath:/static/
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+
+
