--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring.profiles.active>dev</spring.profiles.active> <!-- Aqui, o perfil pode ser alterado para "prd" conforme necessário -->
+        <spring.profiles.active>prd</spring.profiles.active> <!-- Aqui, o perfil pode ser alterado para "prd" conforme necessário -->
     </properties>
 
     <dependencies>
@@ -27,6 +27,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
         </dependency>
 
         <!-- Spring Boot Starter Data JPA -->
@@ -40,6 +46,12 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.6.4.Final</version>
         </dependency>
 
         <!-- H2 Database for Development -->
